# gnome-animated-background-xml

./: Makefile  README.md  gnome-animated-background.sh  main.c  meson.build  original-script.sh  tests.c
headers/: functions.h  input-output.h
src/: functions.c  input_parser.c  xml_creator.c
